[package]
name = "uc_pixelflood"
version = "0.1.0"
authors = ["Lukas Lihotzki <lukas@lihotzki.de>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"

[patch.crates-io.cortex-m-rt]
# TODO: replace with crates.io version when new version is released
git = "https://github.com/rust-embedded/cortex-m-rt.git"

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]
