[package]
name = "uc_pixelflood"
version = "0.1.0"
authors = ["Lukas Lihotzki <lukas@lihotzki.de>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"
spin = "0.4.8"
pin-utils = "0.1.0-alpha"

[patch.crates-io.cortex-m-rt]
# TODO: replace with crates.io version when new version is released
git = "https://github.com/rust-embedded/cortex-m-rt.git"

[dependencies.stm32f7-discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"

[patch."https://github.com/embed-rs/stm32f7-discovery.git".stm32f7-discovery]
path = "/home/benjamin/pixelflood/uc_pixelflood/stm32f7-discovery"

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]


[dependencies.futures-preview]
git = "https://github.com/rust-lang-nursery/futures-rs.git"
default-features = false
features = ["alloc", "nightly"]

[dependencies.smoltcp]
#version = "0.5.0"
git = "https://github.com/astro/smoltcp.git"
branch = "dhcp"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4", "proto-dhcpv4"]


[profile.dev]
codegen-units = 1 # better optimizations
lto = true # better optimizations
incremental = false # TODO: remove after https://github.com/rust-lang/cargo/pull/6610 lands in nightly

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
incremental = false # TODO: remove after https://github.com/rust-lang/cargo/pull/6610 lands in nightly
